--- a/JSR-SDK.vcxproj.filters
+++ b/JSR-SDK.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="src\JSRSDKWrapper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\MarshalEnums.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
